--- a/hackspace/package.json
+++ b/hackspace/package.json
@@ -9,7 +9,8 @@
     "react": "^16.13.1",
     "react-animation": "^1.2.2",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^3.4.3",
+    "react-tooltip": "^4.2.9"
   },
   "scripts": {
     "start": "react-scripts start",
